changed password from visibile to base 64 encoded

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "host": "localhost",
   "user": "postgres",
-  "password": "Abcdef123?",
+  "password": "QWJjZGVmMTIzPw==",
   "database": "itschool",
   "port": "5432"
 }
